main/components/components.css
.BreakpointInlineComponent {
	width: 100rem;
}
.StackFrameComponent {
	padding-left: var(--width);
}
.table-item-selected {
	background-color: color(var(--bluish) alpha(0.3));
}
.selected_stack_frame {
	background-color: color(var(--bluish) alpha(0.3));
}

.StackframeSelectedError {
	background-color: rgba(255, 25, 25, 0.25);
}
.StackFrameComponent {
}
.EventLogText .console {
	--text-color: rgba(255, 255, 255, 0.5);
}
.EventLogText .stdout {
	--text-color: rgba(255, 255, 255, 1.0);
}
.EventLogText .stderr {
	--text-color: rgba(255, 50, 50, 1.0);
}

.ConsolePanel .Table {
	padding-left: 5px;
	padding-right: 5px;
}

.DebuggerPanel .Table {
	padding-left: 3px;
}

.BreakpointsComponent .Table {
	padding-left: 3px;
	padding-right: 3px;
}

.DebuggerItem {
	background-color: var(--segment-color);
	border-radius: 10px;
	border: 1px solid rgba(0,0,0,0.05);
}

.PageTab {
	background-color: rgba(0, 0, 0, 0.075);
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;
	padding-top: 7px;
	padding-left: 7px;
	padding-right: 7px;
	padding-bottom: 2.5px;
	border: 1px solid rgba(0, 0, 0, 0);
	position: relative;
	left: 1px;
}

.PageTab.selected {
	background-color: var(--panel-color);
	border: 1px solid rgba(0, 0, 0, 0.05);
}
.TabbedPanel .Panel {
	border-top-left-radius: 0px;
	padding-top: 2px;
}
.VariablesPanel {
	margin-top: 1.8rem;
}
.UnderlineComponent {
	position: absolute;
	margin-bottom: 5px;
	height: 5px;
	width: 100rem;
	background-color: color(var(--bluish) alpha(0.5));
}

.SelectedLineText {
	--text-color: color(var(--bluish) alpha(0.75));
}

.CommandPrompComponent {
	padding-left: 3rem;
}

